# apilama

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  TODO.txt  docker-compose.test.yml  pyproject.toml  requirements.txt  run_docker_tests.sh  setup.py
ansible_tests/: README.md  apilama_test_playbook.yml  directory_operations_tests.yml  file_operations_tests.yml  pybox_tests.yml  pylama_tests.yml  pyllm_tests.yml  run_tests.sh  shell_operations_tests.yml
apilama/: app.py  logging_config.py
apilama/routes/: file_routes.py  shellama_routes.py
tests/: test_basic.py
